fix modal window z-index

--- a/style/style.css
+++ b/style/style.css
@@ -183,6 +183,7 @@ textarea {
 .not_scroll_box {
     width: 100%;
     height: 100%;
+    z-index: 10;
     background-color: silver;
     opacity: 0.5;
     position: fixed;
